# test_game

./: CMakeLists.txt  Makefile  a.out
includes/: enemy.h  fdf.h  fdf.h.gch
includes/minilibx/: mlx_expose_hook.c
includes/minilibx/test/: mlx-test
libft/: Makefile  author  ft_atoi.c  ft_bzero.c  ft_color.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_itoa_ll.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_padding.c  ft_padding_str.c  ft_printf.c  ft_printf.h  ft_put_uintmax.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putnstr.c  (+43 more)
src/: background.c  do_fire.c  enemy.c  ft_delete_bullet.c  ft_move.c  ft_rotate_ship.c  handle_fire.c  main.c  player.c
texture/: cat.xpm  minstar.xpm  natys.xpm  new_star.xpm  star.xpm  tux.xpm
